[project]
name = "bach-bitcoinaverage_crypto_ticker_and_historical_price"
version = "1.0.0"
description = "RapidAPI: blockchain-data-ltd-blockchain-data-ltd-default/bitcoinaverage-crypto-ticker-and-historical-price"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_bitcoinaverage_crypto_ticker_and_historical_price = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-bitcoinaverage_crypto_ticker_and_historical_price"
Repository = "https://github.com/bachstudio/bach-bitcoinaverage_crypto_ticker_and_historical_price"
Documentation = "https://github.com/bachstudio/bach-bitcoinaverage_crypto_ticker_and_historical_price#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'